# raylib-with-python

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/: rl_w_py.cpp
src/raylib/: __init__.py
tests/: 2D_camera.py  basic_window.py  real_machine_code.py
